--- a/tournament/createmenu.html
+++ b/tournament/createmenu.html
@@ -10,9 +10,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 40px 20px 100px; /* bottom padding for footer */
+      padding: 40px 20px 100px;
       background-color: #f9f9f9;
-      min-height: calc(100vh - 60px - 60px); /* approx height minus header/footer */
+      min-height: calc(100vh - 60px - 60px);
       text-align: center;
     }
 
@@ -37,6 +37,7 @@
       display: flex;
       gap: 20px;
       justify-content: center;
+      margin-bottom: 20px;
     }
 
     .btn {
@@ -71,6 +72,82 @@
       color: #007BFF;
       border-color: #007BFF;
     }
+
+    .item-form {
+      display: none;
+      margin-bottom: 20px;
+    }
+
+    .item-form input,
+    .edit-name,
+    .edit-price {
+      padding: 12px;
+      font-size: 18px;
+      border: 2px solid #007BFF;
+      border-radius: 20px;
+      width: 200px;
+      margin: 5px;
+      color: #007BFF;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .item-card {
+      border: 2px solid #007BFF;
+      border-radius: 12px;
+      padding: 16px;
+      margin: 10px;
+      width: 280px;
+      background-color: white;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      text-align: left;
+      position: relative;
+    }
+
+    .item-name {
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .item-price {
+      position: absolute;
+      right: 16px;
+      top: 16px;
+      color: #007BFF;
+      font-weight: bold;
+    }
+
+    .edit-btn {
+      margin-top: 20px;
+      padding: 6px 16px;
+      border-radius: 10px;
+      border: 2px solid #007BFF;
+      background-color: white;
+      color: #007BFF;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .edit-btn:hover {
+      background-color: #007BFF;
+      color: white;
+    }
+
+    .delete-toggle {
+      position: absolute;
+      bottom: 16px;
+      right: 16px;
+      width: 24px;
+      height: 24px;
+      border: 2px solid #007BFF;
+      border-radius: 50%;
+      background-color: white;
+      cursor: pointer;
+    }
+
+    .delete-toggle.active {
+      background-color: #007BFF;
+    }
   </style>
 </head>
 <body>
@@ -92,9 +169,18 @@
     <h1 class="create-name">Create</h1>
 
     <div class="create-buttons">
-      <button class="btn add-btn">Add</button>
-      <button class="btn delete-btn">Delete</button>
+      <button class="btn add-btn" onclick="showForm()">Add</button>
+      <button class="btn delete-btn" onclick="toggleDeleteMode()">Delete</button>
+      <button class="btn" id="cancelDeleteBtn" style="display:none;" onclick="cancelDeleteMode()">Cancel</button>
     </div>
+
+    <div class="item-form" id="itemForm">
+      <input type="text" id="itemName" placeholder="Name (e.g. Bills)" />
+      <input type="number" id="itemPrice" placeholder="Price" />
+      <button class="btn add-btn" onclick="addItem()">Done</button>
+    </div>
+
+    <div id="itemsContainer"></div>
   </main>
 
   <footer>
@@ -114,5 +200,107 @@
       </button>
     </div>
   </footer>
+
+  <script>
+    let deleteMode = false;
+
+    function showForm() {
+      document.getElementById('itemForm').style.display = 'block';
+    }
+
+    function addItem(name, price) {
+      name = name || document.getElementById('itemName').value.trim();
+      price = price || document.getElementById('itemPrice').value.trim();
+
+      if (!name || !price) return;
+
+      const itemDiv = document.createElement('div');
+      itemDiv.className = 'item-card';
+      itemDiv.innerHTML = `
+        <div class="item-name">${name}</div>
+        <div class="item-price">$${price}</div>
+        <button class="edit-btn">Edit</button>
+      `;
+
+      const editBtn = itemDiv.querySelector('.edit-btn');
+      editBtn.onclick = function () {
+        const currentName = itemDiv.querySelector('.item-name').textContent;
+        const currentPrice = itemDiv.querySelector('.item-price').textContent.replace('$', '');
+
+        itemDiv.innerHTML = `
+          <input type="text" class="edit-name" value="${currentName}" />
+          <input type="number" class="edit-price" value="${currentPrice}" />
+          <button class="edit-btn">Save</button>
+        `;
+
+        itemDiv.querySelector('.edit-btn').onclick = function () {
+          const newName = itemDiv.querySelector('.edit-name').value;
+          const newPrice = itemDiv.querySelector('.edit-price').value;
+          itemDiv.innerHTML = `
+            <div class="item-name">${newName}</div>
+            <div class="item-price">$${newPrice}</div>
+            <button class="edit-btn">Edit</button>
+          `;
+          itemDiv.querySelector('.edit-btn').onclick = editBtn.onclick;
+          if (deleteMode) {
+            addDeleteToggle(itemDiv);
+          }
+        };
+      };
+
+      if (deleteMode) {
+        addDeleteToggle(itemDiv);
+      }
+
+      document.getElementById('itemsContainer').appendChild(itemDiv);
+
+      document.getElementById('itemForm').style.display = 'none';
+      document.getElementById('itemName').value = '';
+      document.getElementById('itemPrice').value = '';
+    }
+
+    function addDeleteToggle(item) {
+      let toggle = item.querySelector('.delete-toggle');
+      if (!toggle) {
+        toggle = document.createElement('div');
+        toggle.className = 'delete-toggle';
+        toggle.onclick = function () {
+          toggle.classList.toggle('active');
+        };
+        item.appendChild(toggle);
+      }
+    }
+
+    function toggleDeleteMode() {
+      deleteMode = !deleteMode;
+
+      const items = document.querySelectorAll('.item-card');
+      items.forEach(item => {
+        let toggle = item.querySelector('.delete-toggle');
+        if (deleteMode) {
+          if (!toggle) {
+            addDeleteToggle(item);
+          }
+        } else {
+          if (toggle && toggle.classList.contains('active')) {
+            item.remove();
+          } else if (toggle) {
+            toggle.remove();
+          }
+        }
+      });
+
+      document.getElementById('cancelDeleteBtn').style.display = deleteMode ? 'inline-block' : 'none';
+    }
+
+    function cancelDeleteMode() {
+      deleteMode = false;
+
+      const toggles = document.querySelectorAll('.delete-toggle');
+      toggles.forEach(toggle => toggle.remove());
+
+      document.getElementById('cancelDeleteBtn').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
